tests/Errors/ErrorHandleStrategy/ErrorHandleValidationStrategy.js
export class ErrorHandleValidationStrategy
{
    handle(error, notification) {
        console.log(error);
    }
}